--- a/client/public/manifest.json
+++ b/client/public/manifest.json
@@ -20,6 +20,6 @@
   ],
   "start_url": ".",
   "display": "standalone",
-  "theme_color": "#000000",
-  "background_color": "#ffffff"
+  "theme_color": "#0a66c2",
+  "background_color": "#f1ece6"
 }
